# SentinelMesh

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
apps/sentinelmesh-agent/: Cargo.toml
apps/sentinelmesh-agent/src/: auth.rs  circuit_breaker.rs  control.rs  main.rs  wal.rs
apps/sentinelmesh-aggregator/: Cargo.toml
apps/sentinelmesh-aggregator/src/: alert.rs  committer.rs  control.rs  main.rs
apps/sentinelmesh-aggregator/static/: index.html
config/: agent.example.yaml  aggregator.example.yaml
contracts/sentinelmesh-canary/: Cargo.toml  idl.json
contracts/sentinelmesh-canary-client/: Cargo.toml
contracts/sentinelmesh-canary-client/.cargo/: audit.toml
contracts/sentinelmesh-canary-client/src/: main.rs
contracts/sentinelmesh-canary/.cargo/: audit.toml
contracts/sentinelmesh-canary/src/: lib.rs
contracts/sentinelmesh-reputation/: Cargo.toml
contracts/sentinelmesh-reputation/src/: lib.rs
crates/sentinelmesh-analysis/: Cargo.toml
crates/sentinelmesh-analysis/benches/: snapshot.rs
crates/sentinelmesh-analysis/src/: anomaly.rs  lib.rs  mev.rs
crates/sentinelmesh-cli/: Cargo.toml
crates/sentinelmesh-cli/src/: config.rs  main.rs  output.rs
crates/sentinelmesh-cli/src/commands/: agent.rs  aggregator.rs  canary.rs  chaos.rs  config.rs  dashboard.rs  init.rs  mod.rs  reputation.rs  status.rs  stubs.rs  zk.rs
crates/sentinelmesh-core/: Cargo.toml
crates/sentinelmesh-core/src/: auth.rs  config.rs  hlc.rs  lib.rs  model.rs  telemetry.rs
crates/sentinelmesh-core/src/zk/: merkle.rs  mod.rs
crates/sentinelmesh-solana/: Cargo.toml
crates/sentinelmesh-solana/src/: client.rs  lib.rs
crates/sentinelmesh-solana/tests/: devnet.rs  localnet.rs
crates/sentinelmesh-storage/: Cargo.toml
crates/sentinelmesh-storage/src/: lib.rs
crates/sentinelmesh-zk/: Cargo.toml
crates/sentinelmesh-zk/methods/: Cargo.toml
crates/sentinelmesh-zk/methods/guest/: Cargo.toml
crates/sentinelmesh-zk/methods/guest/src/: main.rs
crates/sentinelmesh-zk/src/: build.rs  lib.rs
deploy/docker/: Dockerfile.agent  Dockerfile.aggregator
deploy/helm/sentinelmesh/: Chart.yaml  values.yaml
deploy/helm/sentinelmesh/templates/: agent-configmap.yaml  agent-deployment.yaml  aggregator-configmap.yaml  aggregator-deployment.yaml  aggregator-service.yaml
deploy/istio/: destination-rule.yaml  peer-authentication.yaml
deploy/observability/grafana/dashboards/: sentinelmesh-overview.json
deploy/observability/prometheus/: sentinelmesh.rules.yml
deploy/postgres/: 001_init.sql
deploy/systemd/: sentinelmesh-agent.service  sentinelmesh-aggregator.service
docs/: api.md  architecture.md  clickhouse-migration.md  grant-strategy.md  key-rotation-runbook.md  operator-handbook.md  production-security.md  threat-model.md  troubleshooting.md
docs/adrs/: 0001-storage-and-replay.md
openapi/: sentinelmesh.yaml
tests/chaos/: README.md  run_chaos.sh
tests/chaos/lib/: common.sh
tests/chaos/scenarios/: 01_latency_packet_loss.sh  02_rpc_unavailability.sh  03_aggregator_restart.sh  04_kafka_partition.sh
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  mock_clickhouse.rs  mock_kafka.rs  mock_rpc.rs
tests/integration/tests/: flow_and_wal.rs  websocket_and_auth.rs
tests/load/: ingest.js
