[package]
name = "sentinelmesh-agent"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
humantime-serde.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sentinelmesh-core = { path = "../../crates/sentinelmesh-core" }
sentinelmesh-solana = { path = "../../crates/sentinelmesh-solana" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sled = "0.34.7"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1.89"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.5"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
