[package]
name = "sentinelmesh-aggregator"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hyper.workspace = true
hyper-util.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
rustls-pki-types.workspace = true
sentinelmesh-analysis = { path = "../../crates/sentinelmesh-analysis" }
sentinelmesh-core = { path = "../../crates/sentinelmesh-core" }
sentinelmesh-storage = { path = "../../crates/sentinelmesh-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = { version = "0.4.13", features = ["limit"] }
tokio-rustls.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

# DA State Commitments Dependencies
solana-client = "2.1"
solana-sdk = "2.1"
sha2 = "0.10.8"
hex = "0.4.3"

[lints]
workspace = true

[dev-dependencies]
proptest.workspace = true
