[package]
name = "sentinelmesh-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinelmesh"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
indicatif = "0.17"
colored = "2.1"
table = "0.4"
dialoguer = "0.11"
sentinelmesh-core = { path = "../sentinelmesh-core" }
sentinelmesh-zk = { path = "../sentinelmesh-zk" }
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"

[dev-dependencies]
tempfile = "3.10"
