[package]
name = "sentinelmesh-storage"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["json"] }
rskafka.workspace = true
sentinelmesh-core = { path = "../sentinelmesh-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = "0.3.45"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
