[package]
name = "sentinelmesh-integration-tests"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
sentinelmesh-core = { path = "../../crates/sentinelmesh-core" }
sentinelmesh-analysis = { path = "../../crates/sentinelmesh-analysis" }

anyhow.workspace = true
axum = { workspace = true, features = ["http1", "json", "macros", "tokio"] }
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
