[package]
name = "sentinelmesh-zk-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std"] }
sentinelmesh-core = { path = "../../../sentinelmesh-core" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
blake3 = { version = "1.5", default-features = false }

[profile.release]
opt-level = 3
lto = true
